# 2dw3d

./: CMakeLists.txt
shaders/: main.glsl  shapesManager.glsl  uniforms.glsl
shaders/Connections/: basic.glsl  smooth.glsl  template.glsl
shaders/Libraries/: usefulCalculations.glsl
shaders/Shapes/: primitives.glsl  template.glsl
shaders/Textures/: template.glsl
src/: engine.hpp  enums.hpp  main.cpp  objectStructure.hpp  objectStructureDeclarations.hpp  physics.hpp  rendering.hpp  scene.hpp  shapes.hpp  vectors.hpp
